--- a/src/views/booksList.ejs
+++ b/src/views/booksList.ejs
@@ -103,7 +103,7 @@
                                     <div class="col-xs-9">
                                         <h4><span class="label label-default"><%= book.author%></span></h4><h4>
                                             <small style="font-family:courier,'new courier';" class="text-muted"><%= book.publisher%><br>
-                                                <a href="/books/<%=book.id%>" class="text-muted">Read More</a></small>
+                                                <a href="/books/<%=book._id%>" class="text-muted">Read More</a></small>
                                         </h4></div>
                                     <div class="col-xs-3"></div>
                                 </div>
