--- a/src/views/signin.ejs
+++ b/src/views/signin.ejs
@@ -6,12 +6,12 @@
     <title><%= title%></title>
     <meta name="generator" content="Bootply" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="/css/styles.css" rel="stylesheet">
 </head>
 <body>
 <header class="navbar navbar-bright navbar-fixed-top" role="banner">
@@ -91,32 +91,22 @@
 
 
                     <!--/stories-->
-                    <% books.map((book,index) => {%>
-                        <div class="row">
-                            <br>
-                            <div class="col-md-2 col-sm-3 text-center">
-                                <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/men/1.jpg" style="width:100px;height:100px" class="img-circle"></a>
-                            </div>
-                            <div class="col-md-10 col-sm-9">
-                                <h3><%= book.title%></h3>
-                                <div class="row">
-                                    <div class="col-xs-9">
-                                        <h4><span class="label label-default"><%= book.author%></span></h4><h4>
-                                            <small style="font-family:courier,'new courier';" class="text-muted"><%= book.publisher%><br>
-                                                <a href="/books/<%=book._id%>" class="text-muted">Read More</a></small>
-                                        </h4></div>
-                                    <div class="col-xs-3"></div>
-                                </div>
-                                <br><br>
-                            </div>
+                    <div class="row">
+                        <br>
+                        <div class="col-md-2 col-sm-3 text-center">
+                            Sign in!
+                            <form name="singInForm" action="/auth/signin" method="post">
+                                UserName <input name="username" id="username"/><br/>
+                                Passowrd <input name="password" id="password"/><br/>
+                                <input type="submit" value="Sign in">
+                            </form>
                         </div>
-                        <hr>
+                    </div>
 
-                   <% })%>
+
                     <!--/stories-->
 
 
-                    <a href="/" class="btn btn-primary pull-right btnNext">More <i class="glyphicon glyphicon-chevron-right"></i></a>
 
 
                 </div>
@@ -170,6 +160,6 @@
 </footer>
 <!-- script references -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
